# solana-kl-mini-hackathon

./: .env.example  .gitignore  .mcp.json  Anchor.toml  README.md  _IMPLEMENTATION_LOG.md  _IMPLEMENTATION_PLAN.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
cli/: wallet.ts
mcp/: server.ts
migrations/: deploy.ts
programs/fund-splitter/: Cargo.toml
programs/fund-splitter/src/: lib.rs
scripts/: devnet-test.js
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/health/: route.ts
src/app/api/mcp/: route.ts
src/app/api/state/: route.ts
src/app/api/wallet/create/: route.ts
src/app/api/wallet/split/: route.ts
src/app/api/wallet/transfer/: route.ts
src/components/: FundSplitter.tsx  ThemeToggle.tsx  Transfer.tsx  WalletCreator.tsx  WalletPanel.tsx
src/lib/: config.ts  types.ts
src/lib/kv/: store.ts
src/lib/runtime/: context.ts
src/lib/solana/: connection.ts  split.ts  transfer.ts  wallet.ts
src/lib/state/: lock.ts  store.ts
src/lib/wallet/: store.ts
src/service/: index.ts
tests/: fund-splitter.ts
